// Copyright 2024 孔令飞 <colin404@foxmail.com>. All rights reserved.
// Use of this source code is governed by a MIT style
// license that can be found in the LICENSE file. The original repo for
// this file is https://github.com/ashwinyue/one-auth. The professional
// version of this repository is https://github.com/onexstack/onex.

// 权限管理 API 定义
syntax = "proto3";

package v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/ashwinyue/one-auth/pkg/api/apiserver/v1;v1";

// Permission 表示权限信息
message Permission {
    // id 表示权限主键ID
    int64 id = 1;
    // tenant_id 表示租户ID
    int64 tenant_id = 2;
    // menu_id 表示菜单ID
    int64 menu_id = 3;
    // permission_code 表示权限编码
    string permission_code = 4;
    // name 表示权限名称
    string name = 5;
    // description 表示权限描述
    string description = 6;
    // status 表示权限状态
    int32 status = 7;
    // created_at 表示创建时间
    google.protobuf.Timestamp created_at = 8;
    // updated_at 表示更新时间
    google.protobuf.Timestamp updated_at = 9;
}

// GetUserPermissionsRequest 表示获取用户权限请求
message GetUserPermissionsRequest {
    // tenant_id 表示租户ID
    // @gotags: form:"tenant_id"
    int64 tenant_id = 1;
}

// GetUserPermissionsResponse 表示获取用户权限响应
message GetUserPermissionsResponse {
    // permissions 表示权限列表
    repeated Permission permissions = 1;
}

// CheckPermissionsRequest 表示批量检查权限请求
message CheckPermissionsRequest {
    // tenant_id 表示租户ID
    int64 tenant_id = 1;
    // permissions 表示要检查的权限编码列表
    repeated string permissions = 2;
}

// CheckPermissionsResponse 表示批量检查权限响应
message CheckPermissionsResponse {
    // results 表示权限检查结果，key为权限编码，value为是否有权限
    map<string, bool> results = 1;
}

// CheckAPIAccessRequest 表示检查API访问权限请求
message CheckAPIAccessRequest {
    // tenant_id 表示租户ID
    // @gotags: form:"tenant_id"
    int64 tenant_id = 1;
    // path 表示API路径
    // @gotags: form:"path"
    string path = 2;
    // method 表示HTTP方法
    // @gotags: form:"method"
    string method = 3;
}

// CheckAPIAccessResponse 表示检查API访问权限响应
message CheckAPIAccessResponse {
    // has_access 表示是否有访问权限
    bool has_access = 1;
} 